# CodeSnap-Test

./: CMakeLists.txt
include/api/: controller.h
include/core/: math_utils.h
include/db/: database.h
include/network/: http_client.h
src/: main.cpp
src/api/: controller.cpp
src/core/: math_utils.cpp
src/db/: database.cpp
src/network/: http_client.cpp
tests/integration/: test_controller.cpp
tests/unit/: test_math.cpp
